# scratchpad

./: pyproject.toml
src/: main.py
